--- a/MyApplication/app/src/main/res/layout/activity_maps.xml
+++ b/MyApplication/app/src/main/res/layout/activity_maps.xml
@@ -36,13 +36,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/distance"
+                    android:text="@string/Distance"
                     android:textColor="#ffffff"
                     android:textSize="24sp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/distance_text"
+                    android:id="@+id/distance"
                     android:text="@string/_0_km"
                     android:textColor="#ffffff"
                     android:textSize="24sp" />
@@ -64,7 +64,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/duration_text"
-                    android:text="@string/_0_min"
+                    android:text="@string/_00_00"
                     android:textColor="#ffffff"
                     android:textSize="24sp" />
             </LinearLayout>
