--- a/MyApplication/app/src/main/res/layout/activity_user_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_user_profile.xml
@@ -1,256 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20dp"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".UserProfileActivity">
 
-    <ScrollView xmlns:tools="http://schemas.android.com/tools"
+    <ImageView
+        android:id="@+id/profile_image_view"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="@drawable/circular_bg"
+        android:backgroundTint="@color/my_primary"
+        android:scaleType="centerCrop"
+        android:src="@drawable/person_icon" />
+
+    <EditText
+        android:id="@+id/username"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".UserProfileActivity"
-        >
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:hint="Username"
+        android:inputType="text"
+        android:padding="10dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <EditText
+        android:id="@+id/useremail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:hint="Useremail"
+        android:inputType="text"
+        android:padding="10dp" />
 
-            <RelativeLayout
-                android:id="@+id/layout_head"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                >
+    <EditText
+        android:id="@+id/usergender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:hint="Usergender"
+        android:inputType="text"
+        android:padding="10dp" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/RL_imageView">
+    <EditText
+        android:id="@+id/userweight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:hint="Userweight"
+        android:inputType="text"
+        android:padding="10dp" />
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="40dp"
-                        android:elevation="5dp"
-                        app:cardCornerRadius="10dp">
-
-                        <ImageView
-                            android:id="@+id/imageView_profile_dp"
-                            android:layout_width="160dp"
-                            android:layout_height="160dp"
-                            android:scaleType="centerCrop" />
-                    </androidx.cardview.widget.CardView>
-
-                    <ProgressBar
-                        android:id="@+id/progress_bar_profile_pic"
-                        style="?android:attr/progressBarStyleSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="110dp"
-                        android:layout_centerHorizontal="true"
-                        android:elevation="10dp"
-                        android:visibility="gone" />
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/textView_full_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/RL_imageView"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="30dp"
-                    android:textColor="@color/black"
-                    android:textAlignment="center"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:layout_marginTop="-50dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginBottom="15dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="20dp"
-                    android:id="@+id/RL_name">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_centerVertical="true"
-                        android:id="@+id/ic_profile" />
-
-                    <TextView
-                        android:id="@+id/textView_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignStart="@id/ic_profile"
-                        android:layout_marginStart="50dp" />
-                </RelativeLayout>
-
-                <View
-                    android:id="@+id/divider_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@id/RL_name"
-                    android:background="@android:color/darker_gray"/>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/RL_email"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_below="@id/divider_name">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_marginTop="20dp"
-                        android:id="@+id/ic_email"
-                        android:layout_centerVertical="true"/>
-
-                    <TextView
-                        android:id="@+id/textView_email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignStart="@id/ic_email"
-                        android:layout_marginStart="50dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginTop="20dp" />
-                </RelativeLayout>
-
-                <View
-                    android:id="@+id/divider_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@id/RL_email"
-                    android:background="@android:color/darker_gray"/>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/RL_dob"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_below="@id/divider_email">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_centerVertical="true"
-                        android:id="@+id/ic_dob" />
-
-                    <TextView
-                        android:id="@+id/textView_show_dob"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignStart="@id/ic_dob"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="20dp" />
-                </RelativeLayout>
-
-                <View
-                    android:id="@+id/divider_dob"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@id/RL_dob"
-                    android:background="@android:color/darker_gray"/>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/RL_gender"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_below="@id/divider_dob">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:id="@+id/ic_gender"
-                        android:layout_centerVertical="true"
-                        android:layout_marginTop="20dp" />
-
-                    <TextView
-                        android:id="@+id/textView_gender"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignStart="@id/ic_gender"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="20dp" />
-                </RelativeLayout>
-
-                <View
-                    android:id="@+id/divider_gender"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@id/RL_gender"
-                    android:background="@android:color/darker_gray"/>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/RL_mobile"
-                    android:layout_marginTop="10dp"
-                    android:layout_below="@id/divider_gender">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginTop="20dp"
-                        android:id="@+id/ic_mobile" />
-
-                    <TextView
-                        android:id="@+id/textView_UID"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignStart="@id/ic_mobile"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="20dp" />
-                </RelativeLayout>
-
-                <ProgressBar
-                    android:id="@+id/progress_bar"
-                    style="?android:attr/progressBarStyleLarge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_centerHorizontal="true"
-                    android:elevation="10dp"
-                    android:visibility="gone" />
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_marginTop="50dp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:id="@+id/textView_show_register_date"/>
-
-        </LinearLayout>
-    </ScrollView>
+    <EditText
+        android:id="@+id/userheight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:hint="Userheight"
+        android:inputType="text"
+        android:padding="10dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
