--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    tools:context=".loginActivity">
+    tools:context="com.example.kangarun.loginActivity">
 
 
     <EditText
-        android:id="@+id/editTextUserId"
+        android:id="@+id/editTextUserEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="User ID"
+        android:hint="User Email"
         android:inputType="text"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +28,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextUserId"
+        app:layout_constraintTop_toBottomOf="@id/editTextUserEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
