--- a/MyApplication/app/src/main/res/layout/activity_register.xml
+++ b/MyApplication/app/src/main/res/layout/activity_register.xml
@@ -4,8 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:gravity="center_horizontal"
-    android:background="#FF6200EE">
+    android:gravity="center_horizontal">
+
+
+    <EditText
+        android:id="@+id/editTextUserName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="username"
+        android:inputType="text"
+        android:layout_marginBottom="20dp"/>
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -28,6 +36,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:background="@color/purple_500"
         android:textColor="@color/white"/>
 </LinearLayout>
