--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:id="@+id/startExerciseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Start Exercise"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,10 +30,11 @@
         android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="94dp"
         android:layout_marginEnd="24dp"
         android:text="Log out"
         app:layout_constraintEnd_toEndOf="@+id/startExerciseButton"
-        tools:layout_editor_absoluteY="436dp" />
+        app:layout_constraintTop_toTopOf="@+id/startExerciseButton" />
 
     <Button
         android:id="@+id/dmButton"
@@ -57,7 +59,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-
-        
 
 </androidx.constraintlayout.widget.ConstraintLayout>
