--- a/MyApplication/app/src/main/res/layout/activity_chat.xml
+++ b/MyApplication/app/src/main/res/layout/activity_chat.xml
@@ -69,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="12dp"
+        android:background="#D8D8D8"
         app:layout_constraintTop_toBottomOf="@id/imageBack" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -78,6 +79,7 @@
         android:clipToPadding="false"
         android:orientation="vertical"
         android:overScrollMode="never"
+        app:stackFromEnd="true"
         android:padding="20dp"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
