get Exercise Records from activity

--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,24 @@
         android:id="@+id/startExerciseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Exercise"
+        android:text="@string/start_exercise"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <Button
+        android:id="@+id/exerciseRecordButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/exercise_record"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/startExerciseButton"
+        app:layout_constraintVertical_bias="0.222" />
 
     <Button
         android:id="@+id/logoutButton"
