--- a/MyApplication/app/src/main/res/layout/activity_chat.xml
+++ b/MyApplication/app/src/main/res/layout/activity_chat.xml
@@ -79,12 +79,12 @@
         android:clipToPadding="false"
         android:orientation="vertical"
         android:overScrollMode="never"
-        app:stackFromEnd="true"
         android:padding="20dp"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="@id/viewBackground"
-        app:layout_constraintTop_toBottomOf="@id/viewSupporter" />
+        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
+        app:stackFromEnd="true" />
 
 
     <FrameLayout
