Implement upload picture function, but it cannot be saved to cloud so far

--- a/MyApplication/app/src/main/res/layout/activity_user_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_user_profile.xml
@@ -63,5 +63,11 @@
         android:inputType="text"
         android:padding="10dp" />
 
+    <Button
+        android:id="@+id/uploadImageButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Upload picture" />
+
 
 </LinearLayout>
