--- a/MyApplication/app/src/main/res/layout/activity_exercise_record_detail.xml
+++ b/MyApplication/app/src/main/res/layout/activity_exercise_record_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".ExerciseRecordDetailActivity">
+    tools:context=".activity.ExerciseRecordDetailActivity">
 
     <TextView
         android:id="@+id/textViewDate"
