--- a/MyApplication/app/src/main/res/layout/activity_friend_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_friend_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="#D8D8D8"
-    tools:context=".FriendListActivity">
+    tools:context=".activity.FriendListActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageBack"
