--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    tools:context="com.example.kangarun.LoginActivity">
+    tools:context="com.example.kangarun.activity.LoginActivity">
 
 
     <EditText
