--- a/MyApplication/app/src/main/res/layout/activity_user_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_user_profile.xml
@@ -7,7 +7,7 @@
     android:layout_margin="20dp"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".UserProfileActivity">
+    tools:context=".activity.UserProfileActivity">
 
     <ImageView
         android:id="@+id/profile_image_view"
