Now click user to open profile; add a message button

--- a/MyApplication/app/src/main/res/layout/user_container.xml
+++ b/MyApplication/app/src/main/res/layout/user_container.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp">
 
     <ImageView
@@ -14,17 +14,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
+        android:id="@+id/ViewSupporter"
         android:layout_width="1dp"
         android:layout_height="1dp"
-        android:id="@+id/ViewSupporter"
         app:layout_constraintBottom_toBottomOf="@id/imageProfile"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
         app:layout_constraintTop_toTopOf="@id/imageProfile" />
 
     <TextView
+        android:id="@+id/textName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/textName"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="8dp"
         android:ellipsize="end"
@@ -33,7 +33,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/ViewSupporter"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonMessage"
         app:layout_constraintStart_toEndOf="@id/imageProfile" />
 
     <TextView
@@ -46,10 +46,18 @@
         android:maxLines="1"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonMessage"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
-        app:layout_constraintTop_toBottomOf="@id/ViewSupporter"/>
+        app:layout_constraintTop_toBottomOf="@id/ViewSupporter" />
 
-
+    <ImageButton
+        android:id="@+id/buttonMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_message"
+        app:layout_constraintBottom_toBottomOf="@id/textEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/textName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
