now can add friends

--- a/MyApplication/app/src/main/res/layout/activity_friend_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_friend_profile.xml
@@ -69,5 +69,10 @@
         android:layout_height="50dp"
         android:text="Block" />
 
+    <Button
+        android:id="@+id/addFriendButton"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="Add Friend" />
 
 </LinearLayout>
