--- a/MyApplication/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/MyApplication/app/src/main/res/layout/activity_bottom_nav.xml
@@ -7,15 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".activity.BottomNavMenuActivity">
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav_menu" />
-
-    <!-- Other UI components here -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
