--- a/MyApplication/app/src/main/res/layout/activity_search.xml
+++ b/MyApplication/app/src/main/res/layout/activity_search.xml
@@ -26,7 +26,7 @@
         android:backgroundTint="#9e9694"
         android:paddingHorizontal="10dp"
         android:paddingVertical="3dp"
-        android:text="Name ↑"
+        android:text="@string/nameAscending"
         android:drawableLeft="@drawable/ic_sort"
         android:textColor="@color/black"
         app:cornerRadius="5dp"
@@ -42,7 +42,7 @@
         android:backgroundTint="#9e9694"
         android:paddingHorizontal="10dp"
         android:paddingVertical="3dp"
-        android:text="Email ↑"
+        android:text="@string/emailAscending"
         android:drawableLeft="@drawable/ic_sort"
         android:textColor="@color/black"
         app:cornerRadius="5dp"
