--- a/MyApplication/app/src/main/res/layout/fragment_search.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_search.xml
@@ -3,12 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.kangarun.viewmodel.SearchViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:background="#D8D8D8"
-        tools:context=".activity.fragments.SearchFragment">
+        tools:context=".activity.SearchActivity">
 
         <android.widget.SearchView
             android:id="@+id/searchView"
@@ -60,4 +66,3 @@
         </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
